# galaxy-ai-hub

./: .editorconfig  .gitattributes  .gitignore  MODEL_GUIDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
characters/: README.md
characters/helpful/: settings.json  soul.md
characters/jasmine/: settings.json  soul.md
characters/linsey/: settings.json  soul.md
characters/new-assistant/: settings.json  soul.md
scripts/: check-encoding.mjs  package-portable.ps1
src/: App.css  App.tsx  AppRuntime.tsx  appCore.ts  audioVisualizer.ts  internalMediaState.ts  main.tsx  types.ts  utils.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: voice_runtime.py
src-tauri/src/: agent_mcp.rs  agent_react.rs  agent_shell.rs  agent_store.rs  agent_web.rs  app_paths.rs  assistant_runtime.rs  character_store.rs  config_store.rs  downloader.rs  engine_paths.rs  file_tools.rs  google_calendar.rs  image_runtime.rs  lib.rs  llama_manager.rs  media_player.rs  omnivoice_runtime.rs  process_util.rs  resource_monitor.rs  setup_installer.rs  system_detect.rs  text_encoding.rs  weather.rs
src-tauri/src/agent_react/: cards.rs  chat_client.rs  chat_media.rs  clean_agent.rs  executor.rs  google_infer.rs  image_intent.rs  image_proposal.rs  outcomes.rs  planner.rs  prompts.rs  routing.rs  task_state.rs  tests.rs  text_utils.rs  thinking.rs  tool_contract.rs  tool_parse.rs  types.rs  workspace_paths.rs
src-tauri/src/agent_react/routing/: calendar.rs  google.rs  media.rs  tool_guard.rs  weather.rs
src-tauri/src/assistant_runtime/: logging.rs  resource_status.rs  telegram_api.rs  telegram_files.rs  telegram_profile.rs  telegram_reply.rs  tests.rs  voice_commands.rs  voice_samples.rs  voice_setup.rs
src-tauri/src/file_tools/: workspace.rs
src-tauri/src/setup_installer/: catalog.rs  install_files.rs  preflight.rs
src/appCore/: calendarAutomation.ts  chat.ts  identity.ts  memory.ts  models.ts  response.ts  sampling.ts  setup.ts  speechTools.ts  theme.ts
src/components/: AppHeader.tsx  AppOverlays.tsx  AppScreens.tsx  AppShell.tsx  AppSidePanel.tsx  AudioPlaybackContext.tsx  AutomationEditorModal.tsx  AutomationSection.tsx  AvatarFileInputs.tsx  BrainSection.tsx  CalendarSection.tsx  ChatBubble.tsx  ChatComposer.tsx  ConversationPane.tsx  DropImageOverlay.tsx  FloatingAudioControl.tsx  GoogleSection.tsx  HeartbeatMonitor.tsx  Icons.tsx  ImageModeDropdown.tsx  ImageStudioSection.tsx  MediaPlayerSection.tsx  ProfileModalLayer.tsx  ProfileModals.tsx  ProfilePickerSection.tsx  RegisteredAudio.tsx  RegisteredVideo.tsx  ResourceHeader.tsx  SamplingSection.tsx  SetupScreen.tsx  SidePanelContent.tsx  TelegramSection.tsx  ToolActivitySection.tsx  ToolCards.tsx  UI.tsx  WorkspaceSection.tsx
(+56 files in other folders)
