[package]
name = "tauri-app"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
png = "0.17"
jpeg-encoder = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
urlencoding = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.2"
sysinfo = "0.30"
libloading = "0.7.4"
